fix flag alignment

--- a/src/components/Header/Navigation/Navbar/NavDropdown/NavDropdownItem/NavDropdownItem.css
+++ b/src/components/Header/Navigation/Navbar/NavDropdown/NavDropdownItem/NavDropdownItem.css
@@ -1,6 +1,8 @@
 
 .dropdown-item {
-    flex-direction: row;
-    display: flex;
-    justify-content: center;
-    align-items: center;}
+    width: 120px;
+    }
+
+.dropdown-item img {
+  
+}
